			   XPCE ChangeLog
			   ==============

* FIXED: httpd: automatic generation of the image-map for devices.

* FIXED: Properly shutdown *and* close a socket to really free the
  file-descriptor (Unix).  Especially required for the httpd library.


VERSION 5.1.5
=============

* ADDED: Allow controlling the frame<->colour_map through a class-variable.

* ADDED: Honour `verbose' prolog flag to suppress the banner if this flag
  is `silent'.

* FIXED: sh script error in FN script, making build fail on many Unix
  platforms (FN was ported from csh to sh in 5.1.4).

* ADDED: Handling of GNU-Emacs compliant mode-specification on first line
  of the file using -*- Mode -*- or -*- mode: Mode; ... -*-.  Other variables
  are (still) ignored.

* ADDED: Hook into prolog_edit:select_location to use GUI when running from
  the GUI.

* ADDED: PceEmacs: prolog mode: handle :- multifile directives.

* ADDED: (Finally ...) indication of default-button in default X11
  openLook style.

* FIXED: PceEmacs: Enable timed auto-colouring after ->paste

* ADDED: PceEmacs: language mode: ->insert_file_header.

* FIXED: `text_item->clear' sets <-print_name to '', so the item considers
  itself not modified.

* ENHANCED: Stop wheel-mouse from scrolling windows that have no scrollbar
  (introduced extra optional argument to `window->scroll_vertical' and
  `window->scroll_horizontal').


VERSION 5.1.4
=============

* ADDED: Wheel-mouse handling for Windows (tested on '98)

* FIXED: Install the GUI tracer 16x16 icons (Unix version), reported by
  Frank Schilder.

* FIXED: Clip-handling on Windows, notably using class win_printer.

* FIXED: Line-texture (dashes, etc) in Windows NT/2000.  Slightly enhanced
  and documented shortcommings in Windows 95/98/ME.

* FIXED: Problem in finder (opening files) due to the modified type
  checking in frame->return.

* PORT: Fixed handling of --with-jpeg=<dir> and --with-xpm=<dir>. 
  Thanks to Brad Knotwell.


VERSION 5.1.3
=============
