@@ -1,6 +1,10 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: httpd: do www_form_encode/2 on the <-path of the request to
+  decode it.  This fixes the hierarchy window of the online XPCE
+  maual for Mozilla (Netscape 6).
+
 * FIXED: httpd: automatic generation of the image-map for devices.
 
 * FIXED: Properly shutdown *and* close a socket to really free the
